
* 1552559874
 - fix "cdnbox updated" JSON syntax.

* 1552142871
 - add tls ticket keys for haproxy.

* 1546777819
 - correct undefined issue when bind9 start slowly at reboot.

* 1544982708
 - changes for Node 10 compliance.
 - Probe process now auto restarts.
 - randomly run probes to avoid collision.

* 1540824449
 - every node should have 1539537083 before to migrate to this release, because  /cdn/states is removed.
 - probes use now a separate process to avoid busy event loop lag.

* 1539537083:
 - getremovebw over http has been removed. /cdn/states is now deprecated and will be removed next.
 - discovering which node we are is based on DNS IPv4 address. This was done by looking for IPv4 address on each network
   interface. Unfortunately, these addresses are not present on some VM like those of AWS or GCP. This previously was
   fixed by adding the external IP to the loopback interface, but this leads to get loopback bandwith instead of the right
   one. For this reason, we now use a whoami protocol. A call to /cdn/whoami responds with the external IP address of the
   VM (as headers). We use this address to match the DNS entry, find the local address corresponding an then find the right
   network interface.
