@@ -217,8 +217,10 @@ function dnsrequest(remoteaddress, dnspacket) {
   var log = ', "country": "' + ((country && country.country)?country.country.iso_code:'none') +
       '", "rcountry": "' + ((country && country.registered_country)?country.registered_country.iso_code:'none') +
       '", "continent": "' + ((country && country.continent)?country.continent.code:'none') + '" ';
+  var conf = cdnboxStates.config;
+  var cbs = cdnboxStates.config.cdnboxes;
   cdnboxStates.totaldnscount.current++;
-  if (reqname.endsWith('.' + cdnboxStates.config.dnsserver.domain)) {
+  if (reqname.endsWith('.' + conf.dnsserver.domain)) {
 
     var answerdata = '';
     var nslist = getnslist(country);
@@ -249,44 +251,58 @@ function dnsrequest(remoteaddress, dnspacket) {
       // authority (must be second)
       if (dnspacket.qtype == cdnboxDNSPacket.QTYPE.AAAA && !cdnboxstate.ipv6 &&
           !cdnboxstate.config.cname) {
-        dnspacket.addsSOArecord('authority', cdnboxStates.config.dnsserver.domain + '.', nslist[0] + '.');
+        dnspacket.addsSOArecord('authority', conf.dnsserver.domain + '.', cbs[nslist[0]].hostname + '.');
         answerdata += 'SOA-Auth ';
       }
       if (dnspacket.qtype == cdnboxDNSPacket.QTYPE.A || dnspacket.qtype == cdnboxDNSPacket.QTYPE.AAAA || 
           dnspacket.qtype == cdnboxDNSPacket.QTYPE.CNAME) {
-        for (var i=0; i < cdnboxStates.config.dnsserver.nsnum && i < nslist.length; i++) {
-          dnspacket.addsNSrecord('authority', cdnboxStates.config.dnsserver.domain + '.', nslist[i] + '.');
-          answerdata += 'NS-Auth ' + nslist[i] + '. ';
+        for (var i=0; i < conf.dnsserver.nsnum && i < nslist.length; i++) {
+          dnspacket.addsNSrecord('authority', conf.dnsserver.domain + '.', cbs[nslist[i]].hostname + '.');
+          answerdata += 'NS-Auth ' + cbs[nslist[i]].hostname  + '. ';
+        }
+        for (var i=0; i < conf.dnsserver.nsnum && i < nslist.length; i++) {
+          dnspacket.addsArecord('additional', cbs[nslist[i]].hostname  + '.',
+              cdnboxStates[cbs[nslist[i]].name].ipv4n, conf.dnsserver.nsttl);
+          if (cdnboxStates[cbs[nslist[i]].name].ipv6tab) dnspacket.addsAAAArecord('additional',
+              cbs[nslist[i]].hostname  + '.', cdnboxStates[cbs[nslist[i]].name].ipv6tab, conf.dnsserver.nsttl);
+          answerdata += 'NS ' + cbs[nslist[i]].hostname  + '. ';
         }
       }
     } else {
       if (dnspacket.qtype == cdnboxDNSPacket.QTYPE.A || dnspacket.qtype == cdnboxDNSPacket.QTYPE.AAAA) { 
-        dnspacket.addsSOArecord('authority', cdnboxStates.config.dnsserver.domain + '.', nslist[0] + '.');
+        dnspacket.addsSOArecord('authority', conf.dnsserver.domain + '.', cbs[nslist[0]].hostname  + '.');
         answerdata += 'SOA-Auth ';
       }
     }
     if (dnspacket.qtype == cdnboxDNSPacket.QTYPE.SOA || dnspacket.qtype == cdnboxDNSPacket.QTYPE.ANY ||
         dnspacket.qtype == cdnboxDNSPacket.QTYPE.NS) { 
-        dnspacket.addsSOArecord('authority', cdnboxStates.config.dnsserver.domain + '.', nslist[0] + '.');
+        dnspacket.addsSOArecord('authority', conf.dnsserver.domain + '.', cbs[nslist[0]].hostname  + '.');
         answerdata += 'SOA Auth';
     }
     log += ', "adata": "' + answerdata + '", "cdnbox": "' + boxname + '" ';
-  } else if (reqname == cdnboxStates.config.dnsserver.domain) {
+  } else if (reqname == conf.dnsserver.domain) {
     var nslist = getnslist(country);
     if (dnspacket.qtype == cdnboxDNSPacket.QTYPE.NS || dnspacket.qtype == cdnboxDNSPacket.QTYPE.ANY) {
-      for (var i=0; i < cdnboxStates.config.dnsserver.nsnum && i < nslist.length; i++) {
-        dnspacket.addsNSrecord('answer', dnspacket.name, nslist[i] + '.');
-        answerdata += 'NS ' + nslist[i] + '. ';
+      for (var i=0; i < conf.dnsserver.nsnum && i < nslist.length; i++) {
+        dnspacket.addsNSrecord('answer', dnspacket.name, cbs[nslist[i]].hostname  + '.');
+        answerdata += 'NS ' + cbs[nslist[i]].hostname  + '. ';
+      }
+      for (var i=0; i < conf.dnsserver.nsnum && i < nslist.length; i++) {
+        dnspacket.addsArecord('additional', cbs[nslist[i]].hostname  + '.',
+            cdnboxStates[cbs[nslist[i]].name].ipv4n, conf.dnsserver.nsttl);
+        if (cdnboxStates[cbs[nslist[i]].name].ipv6tab) dnspacket.addsAAAArecord('additional',
+            cbs[nslist[i]].hostname  + '.', cdnboxStates[cbs[nslist[i]].name].ipv6tab, conf.dnsserver.nsttl);
+        answerdata += 'NS ' + cbs[nslist[i]].hostname  + '. ';
       }
     }
     if (dnspacket.qtype == cdnboxDNSPacket.QTYPE.SOA || dnspacket.qtype == cdnboxDNSPacket.QTYPE.ANY) {
-      dnspacket.addsSOArecord('answer', cdnboxStates.config.dnsserver.domain + '.', nslist[0] + '.');
+      dnspacket.addsSOArecord('answer', conf.dnsserver.domain + '.', cbs[nslist[0]].hostname  + '.');
       answerdata += 'SOA ';
     }
     if (dnspacket.qtype == cdnboxDNSPacket.QTYPE.A || dnspacket.qtype == cdnboxDNSPacket.QTYPE.AAAA) {
-      for (var i=0; i < cdnboxStates.config.dnsserver.nsnum && i < nslist.length; i++) {
-        dnspacket.addsNSrecord('authority', dnspacket.name, nslist[i] + '.');
-        answerdata += 'NS ' + nslist[i] + '. ';
+      for (var i=0; i < conf.dnsserver.nsnum && i < nslist.length; i++) {
+        dnspacket.addsNSrecord('authority', dnspacket.name, cbs[nslist[i]].hostname  + '.');
+        answerdata += 'NS ' + cbs[nslist[i]].hostname  + '. ';
       }
     }
     log += ', "adata": "' + answerdata + '" ';
@@ -311,41 +327,47 @@ function dnsrequest(remoteaddress, dnspacket) {
 
 // genere la liste des NS en fonction de country/continent.
 function getnslist(country) {
-    var nslist = [], nsgrp = [], head = 0, headcont = 0, pos = 0;
+    var nslist = [], nsgrp = [], head = 0, headcont = 0, pos = 0, memolocal;
     for (var i=0; i < cdnboxStates.config.cdnboxes.length; i++) {
       var cdnbox = cdnboxStates.config.cdnboxes[i];
       if (!cdnbox.isns) continue;
-      if (cdnbox.name == cdnboxStates.local.config.name) continue;
+      if (cdnbox.name == cdnboxStates.local.config.name) { memolocal = i; continue; }
       if (country !== null && country.country && cdnbox.countries !== undefined &&
           cdnbox.countries.indexOf(country.country.iso_code) != -1) {
         head++;
         headcont++;
         pos = Math.max(Math.floor(Math.random()*head*cdnbox.nspriorityratio, head - 1));
-        nslist.splice(pos, 0,cdnbox.hostname);
+//        nslist.splice(pos, 0,cdnbox.hostname);
+        nslist.splice(pos, 0, i);
         nsgrp.splice(pos, 0,cdnbox.nsgroup);
       } else if (country !== null && country.continent && cdnbox.continents !== undefined &&
           cdnbox.continents.indexOf(country.continent.code) != -1) {
         headcont++;
         pos = Math.max(Math.floor(Math.random()*(headcont - head)), headcont - head - 1) + head;
-        nslist.splice(pos, 0,cdnbox.hostname);
+//        nslist.splice(pos, 0,cdnbox.hostname);
+        nslist.splice(pos, 0, i);
         nsgrp.splice(pos, 0,cdnbox.nsgroup);
       } else {
         pos = Math.floor(Math.random()*(nslist.length - headcont + 1)) + headcont;
-        nslist.splice(pos, 0,cdnbox.hostname);
+//        nslist.splice(pos, 0,cdnbox.hostname);
+        nslist.splice(pos, 0, i);
         nsgrp.splice(pos, 0,cdnbox.nsgroup);
       }
     }
     if (country !== null && country.country && cdnboxStates.local.config.countries !== undefined &&
         cdnboxStates.local.config.countries.indexOf(country.country.iso_code) != -1) {
-      nslist.splice(0,0,cdnboxStates.local.config.hostname);
+//      nslist.splice(0,0,cdnboxStates.local.config.hostname);
+      nslist.splice(0,0,memolocal);
       nsgrp.splice(0,0,cdnboxStates.local.config.nsgroup);
     } else if (country !== null && country.continent && cdnboxStates.local.config.continents !== undefined &&
         cdnboxStates.local.config.continents.indexOf(country.continent.code) != -1) {
-      nslist.splice(head,0,cdnboxStates.local.config.hostname);
+//      nslist.splice(head,0,cdnboxStates.local.config.hostname);
+      nslist.splice(head,0,memolocal);
       nsgrp.splice(head,0,cdnboxStates.local.config.nsgroup);
     } else {
       pos = Math.floor(Math.random()*(nslist.length - headcont + 1)) + headcont;
-      nslist.splice(pos,0,cdnboxStates.local.config.hostname);
+//      nslist.splice(pos,0,cdnboxStates.local.config.hostname);
+      nslist.splice(pos,0,memolocal);
       nsgrp.splice(pos,0,cdnboxStates.local.config.nsgroup);
     }
     while (nslist.length > cdnboxStates.config.dnsserver.nsnum &&
