@@ -157,23 +157,25 @@ class cdnboxDNSPacket {
   }
 
   // adds A record
-  addsArecord(type, name, ip) {
+  addsArecord(type, name, ip, ttl = null) {
     this.inccounter(type);
     this.addsname(name);
     this.adds16b(cdnboxDNSPacket.QTYPE.A);
     this.adds16b(1); // Class IN
-    this.adds32b(this.attl);
+    if (ttl === null) this.adds32b(this.attl);
+    else this.adds32b(ttl);
     this.adds16b(4); // RDLength 4
     this.adds32b(ip);
   }
 
   // adds AAAA record
-  addsAAAArecord(type, name, ip) {
+  addsAAAArecord(type, name, ip, ttl = null) {
     this.inccounter(type);
     this.addsname(name);
     this.adds16b(cdnboxDNSPacket.QTYPE.AAAA);
     this.adds16b(1); // Class IN
-    this.adds32b(this.attl);
+    if (ttl === null) this.adds32b(this.attl);
+    else this.adds32b(ttl);
     this.adds16b(16); // RDLength 16 
     ip.copy(this.buff, this.curpos);
     this.curpos += 16;
