@@ -1,4 +1,7 @@
 
+* 1553261389
+ - additional records on A, AAAA and NS
+
 * 1552559874
  - fix "cdnbox updated" JSON syntax.
 
